# Jsondown

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  files.rs  finder.rs  folders.rs  mod.rs  perf.rs  trash.rs  watcher.rs
src-tauri/src/models/: app_config.rs  deleted_file.rs  file_tree.rs  mod.rs  root_folder.rs
src-tauri/src/utils/: ignore_rules.rs  mod.rs  path_utils.rs  trash_utils.rs
src/components/: ContextMenu.tsx  EditorPane.tsx  FileCard.tsx  FlatFileListPane.tsx  FolderTree.tsx  ImagePreview.tsx  ImportFileDialog.tsx  LayoutDensitySwitcher.tsx  MarkdownOrganizeDialog.tsx  MarkdownRenderedViewer.tsx  MilkdownEditor.tsx  NewFolderDialog.tsx  PlainTextCodeEditor.tsx  ReadonlyChunkViewer.tsx  ReadonlyCodeViewer.tsx  RecentlyDeletedEntry.tsx  RecentlyDeletedPane.tsx  RenameDialog.tsx  ResizablePanels.tsx  RootFolderSidebar.tsx  SaveStatus.tsx  SidebarCollapseButton.tsx  ThemeSwitcher.tsx  Toast.tsx  TopEditorToolbar.tsx
src/devtools/: PerfPanel.tsx  perfMonitor.ts  perfTypes.ts  usePerfMonitor.ts
src/services/: tauriFileService.ts
src/stores/: editorStore.ts  fileListStore.ts  filePreviewStore.ts  fileTreeStore.ts  fullFileCacheStore.ts  openedFileCacheStore.ts  recentlyDeletedStore.ts  rootFolderStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts  workspaceStateStore.ts
src/styles/: app.css  layout.css  (+2 more)
(+19 files in other folders)
