[package]
name = "jsondown"
version = "1.6.1"
description = "Jsondown local Markdown editor"
authors = ["huofa"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jsondown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
